--- a/src/app/components/header/style.module.css
+++ b/src/app/components/header/style.module.css
@@ -4,13 +4,15 @@
   display: flex;
 
   justify-content: space-around;
+  align-items: center;
 }
 
 .container ul {
-  display: flex;
+  padding: 0;
   list-style: none;
-  gap: 14px;
   cursor: pointer;
+  display: flex;
+  gap: 1.2rem;
   font-size: 1.6rem;
 }
 
@@ -19,8 +21,43 @@
   text-underline-offset: 4px;
 }
 
+.burger {
+  display: none;
+  cursor: pointer;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.burger span {
+  width: 25px;
+  height: 3px;
+  background: black;
+  border-radius: 2px;
+}
+
 @media (max-width: 400px) {
-  .container ul {
+  .burger {
+    display: flex;
+  }
+
+  .container nav {
     display: none;
+  }
+
+  .mobileMenu {
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    background: #eee;
+
+    padding: 1.2rem;
+    margin: 0;
+
+    list-style: none;
+    user-select: none;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
 }
